<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/buttonLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="current_date"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorBlack34"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/buttonRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/right_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sun"
            android:textColor="@color/colorBlack34" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlack34"
            android:text="@string/mon"/>

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tue"
            android:textColor="@color/colorBlack34" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wed"
            android:textColor="@color/colorBlack34" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thu"
            android:textColor="@color/colorBlack34" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fri"
            android:textColor="@color/colorBlack34" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sat"
            android:textColor="@color/colorBlack34" />

    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:numColumns="7" />

    <LinearLayout
        android:id="@+id/information1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/mon_thu" />

        <TextView
            android:id="@+id/countMonThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_zero" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/information2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/not_fasting" />

        <TextView
            android:id="@+id/countNotFasting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_zero" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/information3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fasting" />

        <TextView
            android:id="@+id/countFasting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_zero" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/information4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/information5"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/colorInfo"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/information6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_ramadhan" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ramadhan"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_puasa_pertengahan_bulan" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ayyamul_bidh"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/information7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_syawal" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/syawal"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_red" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/first_day_of_month"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/information8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_zulhijjah" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/zulhijjah"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_can_not_fasting" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cannot_fasting"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/information9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/color_muharram" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/muharram"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>